--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Test
         run: |
           cd ./vlib/mongo/
-          v test .
+          v -stats test .
       - name: Build Mongo shared lib
         run: |
           cd ./vlib/mongo/
