--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,10 @@ jobs:
         run: |
           make
           sudo ./v symlink
+      - name: Install Mongo dependencies
+        run: |
+          cd ./vlib/mongo/
+          sudo make install
       - name: Test
         run: |
           cd ./vlib/mongo/
