CI: local mongo server

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
         run: |
           curl -LO https://repo.mongodb.org/apt/ubuntu/dists/focal/mongodb-org/7.0/multiverse/binary-amd64/mongodb-org-server_7.0.2_amd64.deb
           sudo apt install -y ./mongodb-org-server_7.0.2_amd64.deb
-          mmkdir -p data
+          mkdir -p data
           mongod --dbpath data &
       - name: Test
         run: |
