--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,9 +68,11 @@ jobs:
           make
           sudo ./v symlink
       - name: Install Mongo dependencies
+        with:
+          path: vlib/mongo
         run: |
-          cd ./vlib/mongo/
-          sudo make build_mongo_c_driver
+          sudo make install
+#          sudo make build_mongo_c_driver
       - name: Build Mongo shared lib
         run: |
           cd ./vlib/mongo/
