--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        mongodb-version: ['4.2', '4.4', '5.0', '6.0']
+        mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0']
     steps:
       - name: Checkout V
         uses: actions/checkout@v2
