--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,11 +11,22 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
-    container: thevlang/vlang:debian-dev
     strategy:
       matrix:
         mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0']
     steps:
+      - name: Checkout V
+        uses: actions/checkout@v2
+        with:
+          repository: vlang/v
+      - name: Install V dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install --quiet -y libglfw3-dev libxi-dev libxcursor-dev
+      - name: Build V
+        run: |
+          make
+          sudo ./v symlink
       - name: Checkout Mongo
         uses: actions/checkout@v2
         with:
