--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,7 +34,7 @@ jobs:
       - name: Install Mongo dependencies
         run: |
           cd ./vlib/mongo/
-          apt update
+          sudo apt update
           make install
       - name: Start MongoDB
         uses: supercharge/mongodb-github-action@1.10.0
@@ -60,7 +60,7 @@ jobs:
       - name: Install Mongo dependencies
         run: |
           cd ./vlib/mongo/
-          apt update
+          sudo apt update
           make install
       - name: Build Mongo shared lib
         run: |
