--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    continue-on-error: true
     strategy:
       matrix:
         mongodb-version: ["4.2", "4.4", "5.0", "6.0", "7.0"]
