--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,11 @@ on:
 jobs:
   tests:
     runs-on: ubuntu-latest
+    continue-on-error: true
+    timeout-minutes: 5
     strategy:
       matrix:
-        mongodb-version: ['4.2', '4.4', '5.0', '6.0', '7.0']
+        mongodb-version: ["4.2", "4.4", "5.0", "6.0", "7.0"]
     steps:
       - name: Checkout V
         uses: actions/checkout@v2
@@ -46,7 +48,7 @@ jobs:
           make test
       - name: Build Mongo example
         run: |
-          cd ./vlib/mongo/examples/
+          cd ../examples/
           v -prod example.v
 
   build:
